@@ -8,10 +8,12 @@ pod_spelling_system:
     - cflags
     - libbz2
     - libs
+    - bzip
 
 pod_coverage:
   skip: 0
   # format is "Class#method" or "Class", regex allowed
   # for either Class or method.
-  private: []
+  private:
+    - #alien_helper
 
