@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added %{bzip2} helper
 
 0.03      2016-01-28 21:43:49 -0500
   - Use Alien::Base::ModuleBuild as configure requires
